--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lingo">
+        <activity android:name=".activities.Quiz2Activity"></activity>
+        <activity android:name=".activities.QuizActivity" />
         <activity
             android:name=".activities.Level2Activity"
             android:parentActivityName=".MainActivity">
