--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lingo"
-    android:requestLegacyExternalStorage="true">
+    android:requestLegacyExternalStorage="true"
+    android:usesCleartextTraffic="true"
+    >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lingo">
+        android:theme="@style/Theme.Lingo"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name=".activities.PresentSimpleActivity"
             android:parentActivityName=".activities.TheoryActivity">
             <meta-data
